--- a/BEM/tab.html
+++ b/BEM/tab.html
@@ -25,6 +25,9 @@
           Lees meter
         </button>
 
+        <button class="button button--danger">
+          gevaar
+        </button>
       </section>
 
     </article>
